--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
     <title>Hej</title>
     <script>
-      //const endpointRoot = 'https://extensionhelperservice-bfb10576355d.herokuapp.com';
-      const endpointRoot = 'http://127.0.0.1:4000';
+      const endpointRoot = 'https://extensionhelperservice-bfb10576355d.herokuapp.com';
+      //const endpointRoot = 'http://127.0.0.1:4000';
 
       document.addEventListener("DOMContentLoaded", () => {
         const canvas = document.getElementById("mycanvas");
